--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   "homepage": "https://github.com/hacksocnotts/typescript-starter#readme",
   "devDependencies": {
     "@types/jest": "^26.0.4",
+    "@types/jsdom": "^16.2.4",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^14.0.22",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "eslint": "^7.4.0",
@@ -54,5 +57,14 @@
     "*.{js,ts}": [
       "npm run lint:staged"
     ]
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.3.0",
+    "graphql-request": "^3.1.0",
+    "jsdom": "^16.4.0",
+    "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1"
   }
 }
